# swagger/swagger-output.json
@@ -242,13 +242,13 @@
           {
             "name": "page",
             "in": "query",
-            "type": "Number",
+            "type": "String",
             "description": "頁數搜尋"
           },
           {
             "name": "limit",
             "in": "query",
-            "type": "Number",
+            "type": "String",
             "description": "撈取資料筆數"
           }
         ],
@@ -625,13 +625,13 @@
           {
             "name": "page",
             "in": "query",
-            "type": "Number",
+            "type": "String",
             "description": "頁數搜尋"
           },
           {
             "name": "limit",
             "in": "query",
-            "type": "Number",
+            "type": "String",
             "description": "撈取資料筆數"
           }
         ],
@@ -894,8 +894,23 @@
         "tags": [
           "Diary - 營養日記"
         ],
-        "description": "取得今月營養日記 API",
-        "parameters": [],
+        "description": "取得月份營養日記列表 API",
+        "parameters": [
+          {
+            "name": "year",
+            "in": "query",
+            "type": "String",
+            "description": "年份",
+            "required": true
+          },
+          {
+            "name": "month",
+            "in": "query",
+            "type": "String",
+            "description": "月份",
+            "required": true
+          }
+        ],
         "responses": {
           "200": {
             "description": "營養資訊",
@@ -908,7 +923,10 @@
                 },
                 "message": {
                   "type": "string",
-                  "example": "取得今月營養日記成功"
+                  "example": "取得今月營養日記列表成功"
+                },
+                "schema": {
+                  "$ref": "#/definitions/getMonthdiarys"
                 }
               },
               "xml": {
@@ -919,13 +937,20 @@
         }
       }
     },
-    "/api/diary": {
+    "/api/diary/{foodId}": {
       "post": {
         "tags": [
           "Diary - 營養日記"
         ],
         "description": "新增一筆營養日記 API",
-        "parameters": [],
+        "parameters": [
+          {
+            "name": "foodId",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          }
+        ],
         "responses": {
           "200": {
             "description": "營養資訊",
@@ -1315,6 +1340,255 @@
                     }
                   }
                 }
+              }
+            }
+          }
+        }
+      }
+    },
+    "getMonthdiarys": {
+      "type": "object",
+      "properties": {
+        "breakfast": {
+          "type": "array",
+          "items": {
+            "type": "object",
+            "properties": {
+              "food": {
+                "type": "object",
+                "properties": {
+                  "_id": {
+                    "type": "string",
+                    "example": "食品Id"
+                  },
+                  "name": {
+                    "type": "string",
+                    "example": "食品名稱"
+                  },
+                  "subName": {
+                    "type": "string",
+                    "example": "食品英文名稱"
+                  },
+                  "brand": {
+                    "type": "string",
+                    "example": "食品品牌"
+                  },
+                  "perUnitWeight": {
+                    "type": "string",
+                    "example": "食品重含量"
+                  },
+                  "nutrition": {
+                    "type": "array",
+                    "items": {
+                      "type": "object",
+                      "properties": {
+                        "ingredient": {
+                          "type": "string",
+                          "example": "食品營養成分"
+                        },
+                        "unit": {
+                          "type": "string",
+                          "example": "食品營養成分單位"
+                        },
+                        "perUnitContent": {
+                          "type": "string",
+                          "example": " 每單位重含量"
+                        }
+                      }
+                    }
+                  }
+                }
+              },
+              "meal": {
+                "type": "string",
+                "example": "餐別類型(breakfast、lunch、dinner、dessert)"
+              },
+              "createdAt": {
+                "type": "string",
+                "example": "建立時間"
+              }
+            }
+          }
+        },
+        "lunch": {
+          "type": "array",
+          "items": {
+            "type": "object",
+            "properties": {
+              "food": {
+                "type": "object",
+                "properties": {
+                  "_id": {
+                    "type": "string",
+                    "example": "食品Id"
+                  },
+                  "name": {
+                    "type": "string",
+                    "example": "食品名稱"
+                  },
+                  "subName": {
+                    "type": "string",
+                    "example": "食品英文名稱"
+                  },
+                  "brand": {
+                    "type": "string",
+                    "example": "食品品牌"
+                  },
+                  "perUnitWeight": {
+                    "type": "string",
+                    "example": "食品重含量"
+                  },
+                  "nutrition": {
+                    "type": "array",
+                    "items": {
+                      "type": "object",
+                      "properties": {
+                        "ingredient": {
+                          "type": "string",
+                          "example": "食品營養成分"
+                        },
+                        "unit": {
+                          "type": "string",
+                          "example": "食品營養成分單位"
+                        },
+                        "perUnitContent": {
+                          "type": "string",
+                          "example": " 每單位重含量"
+                        }
+                      }
+                    }
+                  }
+                }
+              },
+              "meal": {
+                "type": "string",
+                "example": "餐別類型(breakfast、lunch、dinner、dessert)"
+              },
+              "createdAt": {
+                "type": "string",
+                "example": "建立時間"
+              }
+            }
+          }
+        },
+        "dinner": {
+          "type": "array",
+          "items": {
+            "type": "object",
+            "properties": {
+              "food": {
+                "type": "object",
+                "properties": {
+                  "_id": {
+                    "type": "string",
+                    "example": "食品Id"
+                  },
+                  "name": {
+                    "type": "string",
+                    "example": "食品名稱"
+                  },
+                  "subName": {
+                    "type": "string",
+                    "example": "食品英文名稱"
+                  },
+                  "brand": {
+                    "type": "string",
+                    "example": "食品品牌"
+                  },
+                  "perUnitWeight": {
+                    "type": "string",
+                    "example": "食品重含量"
+                  },
+                  "nutrition": {
+                    "type": "array",
+                    "items": {
+                      "type": "object",
+                      "properties": {
+                        "ingredient": {
+                          "type": "string",
+                          "example": "食品營養成分"
+                        },
+                        "unit": {
+                          "type": "string",
+                          "example": "食品營養成分單位"
+                        },
+                        "perUnitContent": {
+                          "type": "string",
+                          "example": " 每單位重含量"
+                        }
+                      }
+                    }
+                  }
+                }
+              },
+              "meal": {
+                "type": "string",
+                "example": "餐別類型(breakfast、lunch、dinner、dessert)"
+              },
+              "createdAt": {
+                "type": "string",
+                "example": "建立時間"
+              }
+            }
+          }
+        },
+        "dessert": {
+          "type": "array",
+          "items": {
+            "type": "object",
+            "properties": {
+              "food": {
+                "type": "object",
+                "properties": {
+                  "_id": {
+                    "type": "string",
+                    "example": "食品Id"
+                  },
+                  "name": {
+                    "type": "string",
+                    "example": "食品名稱"
+                  },
+                  "subName": {
+                    "type": "string",
+                    "example": "食品英文名稱"
+                  },
+                  "brand": {
+                    "type": "string",
+                    "example": "食品品牌"
+                  },
+                  "perUnitWeight": {
+                    "type": "string",
+                    "example": "食品重含量"
+                  },
+                  "nutrition": {
+                    "type": "array",
+                    "items": {
+                      "type": "object",
+                      "properties": {
+                        "ingredient": {
+                          "type": "string",
+                          "example": "食品營養成分"
+                        },
+                        "unit": {
+                          "type": "string",
+                          "example": "食品營養成分單位"
+                        },
+                        "perUnitContent": {
+                          "type": "string",
+                          "example": " 每單位重含量"
+                        }
+                      }
+                    }
+                  }
+                }
+              },
+              "meal": {
+                "type": "string",
+                "example": "餐別類型(breakfast、lunch、dinner、dessert)"
+              },
+              "createdAt": {
+                "type": "string",
+                "example": "建立時間"
               }
             }
           }
